  * added show text
  * added show image
  * different colors for each turtle
  * added turtle shell (aka sprites)
  * erase media (remove children)
  * reset turtle skin on clear
  * added scale text, images, turtle shell
  * center images on turtle
  * fixed turtle layering bug
  * fixed action name bug
  * open file from window location
  * major refactoring of code
  * prevent CR in numeric text area
  * added restore from trash
  * added wait block
  * added save/restore session
  * added stop turtle
  * first pass on a palette strategy
  * added save file to turtle.sugarlabs.org (when running from server) w/tch
  * added svg output to window
  * added menu to trash for restore and clear all
  * fixed block/turtle/canvas layering
  * fixed mouse down logic
  * figured out how to do inline svg with easeljs...
    beginning to convert to svg factory methods.
  * using container caching on blocks
  * fixed labels on random block
  * fixed label on less block (use &lt;)
  * fixed infinite loop problem when searching for expandables
  * fixed more issues with caching
  * reload media thumbnails on load
  * added collapsible stacks
  * added copy/paste of stacks
  * rename action blocks when loading projects
  * added palette entries when encountering new storein blocks
  * allow dragging from collapse button
  * added forever block

TODO:
  * don't save bitmap to session
  * fix canvas sizing, resizing
  * seed svg with bg color on load
  * selectable menu of samples
  * send svg thumbnail to server
  * fix menu tearing issues
  * fix placement of new items in Blocks menu
  * use container caching on palette
  * use snap to pixels
  * user defined blocks
  * better compartmentalization of block code
   (use a dictionary for the code associated with each block)
  * more sensors
  * implement if-then-else, while, until, 'stop action' (AKA break)
  * implement and or not
  * keyboard short cuts
  * cannot open same file twice in a row (no change event?)